samples/_failures_safe/1761469274_cd7e96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53eb3fd2.c:136: error: expected ‘;’, ‘,’ or ‘)’ at end of input
